--- a/me/src/App.css
+++ b/me/src/App.css
@@ -4,7 +4,7 @@
 
 .login-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   height: 100vh;
   padding: 0 30px;
@@ -23,6 +23,7 @@
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-right: 5vw;
 }
 
 .right-content form {
@@ -72,12 +73,25 @@
 
 .navbar {
   background-color: #282c34;
-  padding: 10px;
+  padding: 4vh;
+  display: flex;
+  justify-content: space-between;
 }
 
 .navbar ul {
   list-style: none;
   padding: 0;
+  margin: 0;
+  display: flex;
+}
+
+.navbar-left {
+  display: flex;
+}
+
+.navbar-right {
+  display: flex;
+  margin-left: auto;
 }
 
 .navbar ul li {
@@ -85,10 +99,22 @@
   margin: 0 10px;
 }
 
-.navbar ul li a {
-  color: white;
+.navbar ul li a,
+.navbar ul li button {
   text-decoration: none;
+  color: white;
+  cursor: pointer;
+  background: none;
+  border: none;
+  padding: 0;
+  font: inherit;
 }
+
+/* .navbar ul li button:hover,
+.navbar ul li a:hover {
+  text-decoration: underline;
+} */
+
 
 .home {
   margin-top: 50px;
@@ -99,4 +125,9 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+}
+
+.questions-container {
+  padding: 20px;
+  text-align: center;
 }
