--- a/me/src/components/Main/Main.css
+++ b/me/src/components/Main/Main.css
@@ -8,7 +8,7 @@ li, p, h1, h2 {margin: 0;padding: 0;}
 }
 
 .question-list {
-    text-align: left; /* 왼쪽 정렬 */
+    text-align: center; 
     margin-top: 20px;
     margin-bottom: 40px;
     padding-top: 20px;
@@ -133,7 +133,7 @@ h2 {
 
 .tree-box {
     width: 30%;
-    height: 100px;
+    height: 200px;
     background-color: #e0e0e0;
     border-radius: 5px;
 }
