--- a/me/src/components/Main/Main.css
+++ b/me/src/components/Main/Main.css
@@ -13,7 +13,7 @@ li, p, h1, h2 {margin: 0;padding: 0;}
 
 .question-list {
     text-align: center; 
-    margin-top: 20px;
+    margin-top: 10px;
     margin-bottom: 40px;
     padding-top: 20px;
 }
@@ -32,16 +32,29 @@ li, p, h1, h2 {margin: 0;padding: 0;}
 }
 
 .today-question {
-    background-color: #e0e0e0;
+    background-color: #537b7b;
+    /* color: #072021; */
+    color: white;
     padding: 20px;
     border-radius: 5px;
-    font-size: 18px;
+    font-size: 20px;
     margin-bottom: 10px;
     /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
 }
 
 .prev-question {
-    background-color: #c9c8c8;
+    background-color: #bacdcd;
+    color: #47696a;
+    width: 80%;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 15px;
+    margin: 0 auto 10px auto;
+}
+
+.preprev-question {
+    background-color: #d8e7e7;
+    color: #7c9e9f;
     width: 60%;
     padding: 10px;
     border-radius: 5px;
@@ -69,53 +82,46 @@ li, p, h1, h2 {margin: 0;padding: 0;}
 
 .answer-box {
     flex: 1 1 calc(20% - 10px); /* 5개씩 표시 */
-    max-width: calc(20% - 10px); /* 최대 너비 설정 */
+    /* max-width: calc(20% - 10px); */
+    max-width: 900px;
     box-sizing: border-box;
-    padding: 5px; /* 여백 줄이기 */
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    background-color: #f9f9f9;
+    padding: 17px; /* 여백 줄이기 */
+    /* border: 1px solid #ccc; */
+    border-radius: 10px;
+    /* background-color: #f9f9f9; */
+    background-color: white;
     height: 150px; /* 정사각형으로 만들기 위해 높이를 설정 */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
 }
 
 .answer-box p {
-    margin: 2px 0; /* 여백 줄이기 */
+    /* margin: 2px 0; */
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
 .answer-box p.question {
+    height: 25%;
     white-space: normal; 
     font-size: 12px; /* 폰트 크기 줄이기 */
     font-weight: bold;
     overflow: -moz-hidden-unscrollable;
     text-overflow: ellipsis; /* 중간 줄임표 */
     display: -webkit-box;
-    -webkit-line-clamp: 1;
+    /* -webkit-line-clamp: 1; */
     -webkit-box-orient: vertical;
 }
 
 .answer-box p.answer {
+    height: 68%;
     white-space: normal; /* 줄 바꿈 허용 */
     font-size: 12px; /* 폰트 크기 줄이기 */
 }
 
-h2 {
-    font-size: 20px;
-    margin-bottom: 10px;
-}
-
-.random-trees {
-    text-align: left; /* 왼쪽 정렬 */
-    margin-top: 20px;
-    margin-bottom: 40px;
-    padding-top: 20px;
-}
-
-.random-trees h3 {
+.answer-list h2 {
     display: flex;
     justify-content: space-between; /* Aligns items to the left and right */
     align-items: center;
@@ -123,7 +129,7 @@ h2 {
     margin-bottom: 10px;
 }
 
-.random-trees h3 span {
+.answer-list h2 span {
     font-size: 14px;
     color: gray;
 }
