--- a/me/src/components/Questions/ViewAnswer.css
+++ b/me/src/components/Questions/ViewAnswer.css
@@ -71,14 +71,14 @@
     font-size: 20px;
   }
   
-  .color-box {
+  .viewcolor-box {
     width: 100px;
     height: 100px;
     border-radius: 8px;
     margin-bottom: 20px;
   }
   
-  .answer-text {
+  .viewanswer-text {
     font-size: 16px;
     margin-bottom: 20px;
   }
