--- a/me/src/components/WordTree/WordClick.css
+++ b/me/src/components/WordTree/WordClick.css
@@ -80,7 +80,7 @@
     margin-bottom: 5px;
 }
 
-.line {
+.click-line {
     width: 100%;
     border-bottom: 1px solid #ccc;
     margin-bottom: 10px;
