--- a/me/src/components/WordTree/WordTree.css
+++ b/me/src/components/WordTree/WordTree.css
@@ -5,18 +5,16 @@
     box-sizing: border-box;
   }
   
-
-
 .wordtree-main {
     width: 50%;
     text-align: center;
-    padding: 20px;
+    padding-top: 80px;
     display: inline-block;
-    background-color: yellow;
+    /* background-color: yellow; */
   }
 
 .wordtree-container {
     background-color: white;
     display: 'inline-block';
-    height: '450px';
+    height: '480px';
 }
