--- a/me/src/components/Questions/PostAnswer.css
+++ b/me/src/components/Questions/PostAnswer.css
@@ -1,11 +1,10 @@
 li, p, h1, h2 {margin: 0;padding: 0;}
 
 .answer-details-container {
-    max-width: 900px;
-    margin: 20px auto; /* 좌우에 20px 간격을 줌 */
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
+    width: 100%;
+    max-width: 950px;
+    margin: 0 auto;
+    padding-top: 5px;
 }
 
 .header-title {
@@ -20,14 +19,14 @@ li, p, h1, h2 {margin: 0;padding: 0;}
     color: #666;
 }
 
-.question-box {
+/* .post-question-box {
     background-color: #f0f0f0;
     padding: 20px;
     border-radius: 8px;
     text-align: center;
     font-size: 18px;
     margin-bottom: 20px;
-}
+} */
 
 .edit-section {
     display: flex;
@@ -35,17 +34,47 @@ li, p, h1, h2 {margin: 0;padding: 0;}
 }
 
 .color-picker {
+    height: 54px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+}
+
+.color-picker input {
+    padding-block: 0px;
+    padding-inline: 0px;
+    appearance: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+    background-color: white;
+    width: 52px;
+    height: 54px;
+    display: flex;
+}
+
+.color-input::-webkit-color-swatch-wrapper {
+    padding: 0;
+}
+
+.color-input::-webkit-color-swatch {
+    border: none;
+    border-radius: 0; /* 사각형으로 만들기 위해 */
+    padding: 0;
+    margin: 0;
+}
+
+.color-picker label{
+    margin-left: 20px;
 }
 
 .answer-editor {
     position: relative;
     width: 100%;
-    max-width: 560px; /* 너비를 줄여서 color picker와 겹치지 않도록 조정 */
-    background-color: #f0f0f0;
-    border-radius: 8px;
+    height: 307px;
+    max-width: 700px; /* 너비를 줄여서 color picker와 겹치지 않도록 조정 */
+    background-color: #e9eeee;
+    border-radius: 5px;
     padding: 20px;
     padding-right: 50px;
     display: flex;
@@ -54,21 +83,23 @@ li, p, h1, h2 {margin: 0;padding: 0;}
 }
 
 .answer-textarea {
-    width: 100%;
+    width: 95%;
     height: 200px;
     margin-bottom: 20px;
     padding: 10px;
-    
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    line-height: 24px;
     border: none;
     border-radius: 4px;
-    background-color: #f0f0f0;
+    background-color: #e9eeee;
     resize: none;
 }
 
 .visibility-icon {
     position: absolute;
     top: 20px;
-    right: 20px;
+    right: 25px;
     cursor: pointer;
     font-size: 20px;
 }
@@ -85,17 +116,17 @@ li, p, h1, h2 {margin: 0;padding: 0;}
     margin-bottom: 20px;
 } */
 
-.date-text {
+/* .date-text {
     font-size: 14px;
     color: #666;
     margin-bottom: 20px;
-}
+} */
 
 .save-button {
     background-color: transparent;
     color: #333;
-    border: 2px solid #333;
-    padding: 10px 20px;
+    border: 1.5px solid #333;
+    padding: 8px 18px;
     border-radius: 20px;
     cursor: pointer;
     align-self: flex-end;
