--- a/me/src/components/Questions/Questions.css
+++ b/me/src/components/Questions/Questions.css
@@ -108,6 +108,7 @@ li, p, h1, h2 {margin: 0;padding: 0;}
 
   .answer-text {
     font-size: 18pt;
+    font-weight: 300;
     margin: auto;
     text-align: center;
     /* margin-right: 10px; */
