--- a/me/src/components/Questions/ViewAnswer.css
+++ b/me/src/components/Questions/ViewAnswer.css
@@ -1,6 +1,6 @@
 .answer-details-container {
   width: 100%;
-  max-width: 950px;
+  max-width: 910px;
   margin: 0 auto;
   padding-top: 5px;
   }
@@ -40,7 +40,7 @@
   .view-section {
     position: relative;
     width: 100%;
-    height: 307px;
+    height: 380px;
     background-color: #ffffff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     border-radius: 8px;
@@ -86,28 +86,30 @@
   
   .view-content {
     display: grid;
+    height: 280px;
     grid-template-columns: 1fr 0.1fr;
     /* margin-top: 20px; */
     padding: 20px;
   }
 
   .viewcolor-box {
-    width: 120px;
-    height: 150px;
-    /* margin-left: 25px; */
-    /* display: flex; */
+    width: 90px;
+    height: 315px;
+    display: flex;
     padding-top: 15px;
     padding-right: 15px;
-    /* justify-content: flex-end;
-    align-items: flex-end; */
+    /* justify-content: center;
+    align-items: center; */
+    writing-mode: vertical-rl;
     text-align: right;
     color: white;
+    font-size: 18px;
     border-radius: 10px;
   }
-  
+
   .viewanswer-text {
     text-align: left;
-    width: 80%;
+    width: 95%;
     font-size: 16px;
     margin-bottom: 20px;
   }
@@ -123,22 +125,40 @@
     align-self: flex-end;
   } */
   
-  .save-button:hover {
+  /* .save-button:hover {
     background-color: #333;
     color: #fff;
-  }
+  } */
   
   .edit-button {
-    background-color: #333;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 4px;
+    background-color: transparent;
+    color: #333;
+    border: 1.5px solid #333;
+    padding: 8px 18px;
+    margin-left: 10px;
+    border-radius: 20px;
     cursor: pointer;
-    margin-top: 20px;
+    align-self: center;
   }
   
   .edit-button:hover {
-    opacity: 0.9;
+    background-color: #333;
+    color: #fff;
+  }
+
+  .goback-button {
+    background-color: transparent;
+    color: #333;
+    border: 1.5px solid #333;
+    padding: 8px 18px;
+    margin-right: 10px;
+    border-radius: 20px;
+    cursor: pointer;
+    align-self: center;
+  }
+  
+  .goback-button:hover {
+    background-color: #333;
+    color: #fff;
   }
   
