--- a/me/src/components/Login/Login.css
+++ b/me/src/components/Login/Login.css
@@ -33,7 +33,7 @@ li, p, h1, h2 { margin: 0; padding: 0; }
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 300px; /* 정사각형으로 만들기 위한 너비 설정 */
+  width: 350px; 
   height: 300px; /* 정사각형으로 만들기 위한 높이 설정 */
 }
 
@@ -53,14 +53,14 @@ li, p, h1, h2 { margin: 0; padding: 0; }
   display: block;
   margin: 10px 0;
   padding: 10px;
-  width: 80%;
+  width: 100%;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
 
 .right-content button {
   padding: 10px 20px;
-  width: 80%;
+  width: 100%;
   background-color: #072021;
   color: white;
   border: none;
