--- a/me/src/components/Main/Main.css
+++ b/me/src/components/Main/Main.css
@@ -73,12 +73,12 @@ li, p, h1, h2 {margin: 0;padding: 0;}
     margin-bottom: 10px;
 }
 
-.answer-container {
+/* .answer-container {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
     justify-content: flex-start; /* 왼쪽 정렬 */
-}
+
 
 .answer-box {
     flex: 1 1 calc(20% - 10px); /* 5개씩 표시 */
@@ -106,7 +106,7 @@ li, p, h1, h2 {margin: 0;padding: 0;}
 .answer-box p.question {
     height: 25%;
     white-space: normal; 
-    font-size: 12px; /* 폰트 크기 줄이기 */
+    font-size: 13px; /* 폰트 크기 줄이기 */
     font-weight: bold;
     overflow: -moz-hidden-unscrollable;
     text-overflow: ellipsis; /* 중간 줄임표 */
@@ -118,7 +118,7 @@ li, p, h1, h2 {margin: 0;padding: 0;}
 .answer-box p.answer {
     height: 68%;
     white-space: normal; /* 줄 바꿈 허용 */
-    font-size: 12px; /* 폰트 크기 줄이기 */
+    font-size: 13px; /* 폰트 크기 줄이기 */
 }
 
 .answer-list h2 {
