--- a/me/src/components/Profile/Profile.css
+++ b/me/src/components/Profile/Profile.css
@@ -8,7 +8,7 @@
   }
   
   .profile-container {
-    background-color: #86afaf;
+    background-color: #839b9b;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
