--- a/me/src/components/Social/FriendPage.css
+++ b/me/src/components/Social/FriendPage.css
@@ -1,7 +1,11 @@
 /* FriendPage.css */
 
 .friend-page {
-    padding: 20px;
+    width: 100%;
+    /* max-width: 950px; */
+    margin: 0 auto;
+    /* padding-top: 5px; */
+    /* padding: 20px; */
   }
   
   .friend-header {
@@ -12,28 +16,37 @@
   }
   
   .friend-tree {
-    background-color: #e0e0e0;
-    padding: 20px;
+    background-color: #ffffff;
+    /* height: 500px; */
+    padding: 0px;
     border-radius: 5px;
-    width: 60%;
+    width: 100%;
     text-align: center;
   }
   
   .follow-button {
-    padding: 10px 20px;
-    background-color: #4caf50;
-    color: white;
-    border: none;
-    border-radius: 4px;
+    background-color: transparent;
+    color: #333;
+    border: 1.5px solid #333;
+    padding: 8px 18px;
+    border-radius: 20px;
+    margin-bottom: 30px;
     cursor: pointer;
-  }
-  
-  .follow-button:hover {
-    background-color: #45a049;
-  }
+    align-self: flex-end;
+}
+
+.follow-button:hover {
+    background-color: #333;
+    color: #fff;
+}
   
   .friend-answers {
     margin-top: 20px;
+  }
+
+  .friend-answers h2 {
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
   
   .answers-list {
